--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
+    "joi": "^17.3.0",
     "mongoose": "^5.10.14"
   },
   "devDependencies": {
